# kitlab

./: .env.example  .gitignore  README.md  auth.html  chat.html  detail.html  index.html  profile.html  pyproject.toml  sale.html
assets/css/: style-prefix.css
assets/css/auth/: auth.css
assets/css/chat/: app.css  icons.css
assets/css/detail/: detail.css
assets/css/profile/: profile.css
assets/css/sale/: sale.css
assets/js/: script.js
books/: admin.py  context_processors.py  forms.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
books/migrations/: 0001_initial.py  0002_book_city_condition_language_publishing_and_more.py  0003_alter_book_options_book_approved_at_book_author_and_more.py  0004_category_emoji_code_alter_book_created_at_and_more.py  0005_alter_condition_options_book_cover_photo_book_seller_and_more.py  0006_alter_book_is_approved.py
books/templates/: book-filter.html  detail.html  index.html  sale.html  success-sale.html
books/templatetags/: custom_book_filters.py
core/: asgi.py  redis_client.py  settings.py  urls.py
message/: apps.py  consumers.py  context_processors.py  models.py  routing.py  signals.py  urls.py  views.py
message/templates/: message.html
static/css/: app.css  books.css  left-side.css
static/favicon/: site.webmanifest
static/js/: app.js  books.js  notyf.min.js
templates/: 404.html  base.html  books.html  loading.html  menu-list.html  sidebar.html
users/: admin.py  forms.py  mixins.py  models.py  signals.py  urls.py  views.py
users/templates/: authenticate.html  contact.html  profile.html
(+19 files in other folders)
