[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Sohret Aga <shohretaga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"
pillow = "^11.0.0"
channels = "^4.2.0"
daphne = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
